--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "minimal-react-testing",
   "version": "1.0.0",
-  "description": "testing with jest, enzyme, coverage, react, babel",
+  "description": "webpack react jest enzyme babel scss minimal config",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack"
+    "start": "webpack-dev-server --config ./webpack.config.js"
   },
   "author": "bui duc cuong",
-  "license": "ISC"
+  "license": "ISC",
+  "babel": {
+    "presets": [
+      "env",
+      "stage-0"
+    ]
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
+  }
 }
