--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "babel": {
     "presets": [
       "env",
+      "react",
       "stage-0"
     ]
   },
@@ -19,9 +20,15 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "react-hot-loader": "^4.3.3",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   }
 }
