--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "webpack react jest enzyme babel scss minimal config",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "start": "webpack-dev-server --config ./webpack.config.js"
   },
   "author": "bui duc cuong",
@@ -22,6 +22,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
+    "jest": "^23.4.0",
     "react-hot-loader": "^4.3.3",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
@@ -30,5 +34,13 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup/setupEnzyme.js",
+    "testPathIgnorePatterns": ["<rootDir>/__tests__/setup/"],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ]
   }
 }
