--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
       "env",
       "react",
       "stage-0"
+    ],
+    "plugins": [
+      "react-hot-loader/babel"
     ]
   },
   "devDependencies": {
@@ -37,7 +40,9 @@
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup/setupEnzyme.js",
-    "testPathIgnorePatterns": ["<rootDir>/__tests__/setup/"],
+    "testPathIgnorePatterns": [
+      "<rootDir>/__tests__/setup/"
+    ],
     "moduleDirectories": [
       "node_modules",
       "src"
